@@ -1,3 +1,14 @@
+2019-10-09  Andy Estes  <aestes@apple.com>
+
+        [iOS] Remove redundant uses of USE(UIKIT_EDITING)
+        https://bugs.webkit.org/show_bug.cgi?id=202717
+
+        Reviewed by Anders Carlsson.
+
+        * page/ios/FrameIOS.mm:
+        (WebCore::Frame::qualifyingNodeAtViewportLocation):
+        (WebCore::Frame::approximateNodeAtViewportLocationLegacy):
+
 2019-10-09  Chris Dumez  <cdumez@apple.com>
 
         [iOS] REGRESSION (r250398) Layout Test fast/history/page-cache-element-state-focused.html is failing
